--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-runtime:2.2.6'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     kapt 'androidx.room:room-compiler:2.2.6'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
