--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.katyrin.movieapp"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -22,8 +22,21 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs{
+        release{
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file("apikey.properties").newDataInputStream())
+
+            storeFile file(properties['store_file'])
+            storePassword properties['store_password']
+            keyAlias properties['key_alias']
+            keyPassword properties['key_password']
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -37,6 +50,17 @@ android {
     }
     buildFeatures {
         viewBinding = true
+    }
+    flavorDimensions 'version'
+    productFlavors {
+        prod {
+            dimension 'version'
+            versionNameSuffix '.prod'
+        }
+        practice {
+            dimension 'version'
+            versionNameSuffix '.practice'
+        }
     }
 }
 
@@ -57,7 +81,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.preference:preference-ktx:1.1.1'
